# Logger_freenect

./: .kinect_calibration.cpp.swp  .kinect_calibration.h.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  freenect_module.cpp  freenect_module.h  kinect_calibration.cpp  kinect_calibration.h  kinect_capture  kinect_capture_app.cpp  kinect_capture_app.h
capture/: registration.yml
